src/test/deca/context/invalid/class20.deca
class A{
    int a;
} 
{
    a=new A();
    
}